# OpenXtraflame

./: .gitignore  Dockerfile.esp-idf  README.md  docker-compose.yml
.github/: FUNDING.yml
analysis/: firmware-cartography.md  micronova_registers.txt  session_2026-07-03_logs.md
analysis/photos/: README.md
analysis/qemu/: extracted_config.txt
analysis/tools/: analysis_output.txt  extraflame_symbols.txt  idf43_reference.elf  idf43_symbols.txt
docs/: BRAIN.md  BUILDING.md  CLOUD_REVERSE_NOTES.md  DUMPING_ORIGINAL.md  GUARDIAN_MODE_IDEA.md  HARDWARE_TARGET_BLACKLABEL.md  HARDWARE_TARGET_EXTERNAL.md  IDEAS.md  MAINTENANCE.md  MQTT_PROTOCOL.md  OTA.md  PROTOCOLE-MICRONOVA.md  RELATED_PROJECTS.md  STATUS.md  STOVE-TYPES.md  example-boot-log.txt
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  alarm_history.c  alarm_history.h  cloud_bridge.c  cloud_bridge.h  cloud_rest.c  cloud_rest.h  config_nvs.c  config_nvs.h  hardware_config.h  idf_component.yml  leds.c  leds.h  log_ring.c  log_ring.h  main.c  micronova.c  micronova.h  mqtt_bridge.c  mqtt_bridge.h  ota.c  ota.h  params_diff.c  params_diff.h  pellet_forecast.c  pellet_forecast.h  web_ui.c  web_ui.h  wifi_bridge.c  wifi_bridge.h
firmware/main/certs/: extraflame_ca.pem
firmware/main/web/: index.html  script.js  style.css
ha-config/: mqtt-example.yaml
tools/: analyze_ota0.py  fake_stove_simulator.py  ghidra_analysis.md  make_esp32_elf.py  qemu_gdb_debug.md  sanitize_dump.py
tools/ghidra_scripts/: ExtractGPIOs.java
