idf_component_register(
    SRCS
        "main.c"
        "config_nvs.c"
        "wifi_bridge.c"
        "mqtt_bridge.c"
        "cloud_bridge.c"
        "cloud_rest.c"
        "micronova.c"
        "web_ui.c"
        "leds.c"
        "ota.c"
        "log_ring.c"
    INCLUDE_DIRS
        "."
    EMBED_TXTFILES
        "web/index.html"
        "web/style.css"
        "web/script.js"
        "certs/extraflame_ca.pem"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        mqtt
        esp_http_server
        esp_http_client
        esp_https_ota
        app_update
        mbedtls
        esp-tls
        espressif__mdns
        driver
        json
)
